# document-processing

./: .env.example  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  go.work  go.work.sum  prompts.py  pyproject.toml  run.py  test.py
document-information-extraction/: go.mod
donut/: dockerfile  run.py
external-services/donut/: dockerfile
external-services/tesseract/: dockerfile
extraction-processes/: docker-compose.yml
extraction-processes/tesseract/: pyproject.toml  run.py
extraction-service/tesseract/: dockerfile  main.go
got-ocr2/: .gitignore  dockerfile  run.py
image-clasifier/: dockerfile  run.py
layoutlm-document-qa/: .dockerignore  dockerfile  load_models.py  run.py
llm-agents/: dockerfile  go.mod  run.py
llm-agents/src/: main.go
llm-machine/: dockerfile  run.py
main-system/: .gitignore  docker-compose.yml  prometheus.yml  redpanda-console-config.yml
streamlit-app/: app.py  pyproject.toml  test.py
streamlit-app/pages/: generate_images.py  image_extraction.py
streamlit-app/utils/: API.py  chat_gpt.py  url_caller.py
tesseract-server/: .dockerignore  dockerfile  pyproject.toml  run.py
text-to-speech/: Dockerfile  run.py  test.py
web-interface/: go.mod
workflows/: config.toml  go.mod  go.sum  main.go
workflows/src/: activity.go  utility.go  workflow.go
yolov8/: routs.py
