[tool.poetry]
name = "receipt-processor"
version = "0.1.0"
description = ""
authors = ["freya-aino <freya.aino@pm.me>"]
readme = "README.md"
packages = [{include = "receipt_processor"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.44.0"
pytesseract = "^0.3.13"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
