[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streamlit_app"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
openai = "^1.46.0"
gradio-client = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
