[tool.poetry]
name = "tesseract-server"
version = "0.1.0"
description = ""
authors = ["freya-aino <freya.aino@pm.me>"]
packages = [{include = "tesseract_server", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.13"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
opencv-python = "^4.10.0.84"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
